Update README with features and remove unused controller classes